// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallModalContent should match a snapshot where an org admin and desktop mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-mb11"
      >
        <mock-styled.p
          classname="el-has-grey-text"
        >
          As an organisation admin, you have control over 
          enabling
           of ‘
          will-test-dev-co-voracious-person
          ’ for either your Office Group or for 
          <b>
            all
          </b>
           Users and Offices within your Organisation. To do this, you need to visit the
           
          Reapit Connect Management App.
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Desktop Integration
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </mock-styled.p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Pricing Information
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Data Permissions
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </mock-styled.p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
      </div>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-center"
        >
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            Cancel
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
            type="button"
          >
            <mock-styled.div />
            Confirm
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-mb11"
    >
      <mock-styled.p
        classname="el-has-grey-text"
      >
        As an organisation admin, you have control over 
        enabling
         of ‘
        will-test-dev-co-voracious-person
        ’ for either your Office Group or for 
        <b>
          all
        </b>
         Users and Offices within your Organisation. To do this, you need to visit the
         
        Reapit Connect Management App.
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Desktop Integration
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </mock-styled.p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Pricing Information
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Data Permissions
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </mock-styled.p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
    </div>
    <mock-styled.div>
      <mock-styled.div
        classname="el-button-group-align-center"
      >
        <mock-styled.button
          classname="el-intent-neutral"
        >
          <mock-styled.div />
          Cancel
        </mock-styled.button>
        <mock-styled.button
          classname="el-intent-primary"
          disabled="false"
          type="button"
        >
          <mock-styled.div />
          Confirm
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where an org admin and web mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-mb11"
      >
        <mock-styled.p
          classname="el-has-grey-text"
        >
          As an organisation admin, you have control over 
          enabling
           of ‘
          will-test-dev-co-voracious-person
          ’ for either your Office Group or for 
          <b>
            all
          </b>
           Users and Offices within your Organisation. To do this, you need to visit the
           
          Reapit Connect Management App.
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Desktop Integration
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </mock-styled.p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Pricing Information
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Data Permissions
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </mock-styled.p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
      </div>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-center"
        >
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            Cancel
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
            type="button"
          >
            <mock-styled.div />
            Confirm
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-mb11"
    >
      <mock-styled.p
        classname="el-has-grey-text"
      >
        As an organisation admin, you have control over 
        enabling
         of ‘
        will-test-dev-co-voracious-person
        ’ for either your Office Group or for 
        <b>
          all
        </b>
         Users and Offices within your Organisation. To do this, you need to visit the
         
        Reapit Connect Management App.
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Desktop Integration
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </mock-styled.p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Pricing Information
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Data Permissions
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </mock-styled.p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
    </div>
    <mock-styled.div>
      <mock-styled.div
        classname="el-button-group-align-center"
      >
        <mock-styled.button
          classname="el-intent-neutral"
        >
          <mock-styled.div />
          Cancel
        </mock-styled.button>
        <mock-styled.button
          classname="el-intent-primary"
          disabled="false"
          type="button"
        >
          <mock-styled.div />
          Confirm
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where app is free 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-mb11"
      >
        <mock-styled.p
          classname="el-has-grey-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for 
          <b>
            all
          </b>
           Users and Offices within your Organisation.
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Desktop Integration
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </mock-styled.p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Pricing Information
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Will Test DevCo
           have specified there is no cost for using this 
          integration
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Data Permissions
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </mock-styled.p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
      </div>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-center"
        >
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            Cancel
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
            type="button"
          >
            <mock-styled.div />
            Confirm
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-mb11"
    >
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for 
        <b>
          all
        </b>
         Users and Offices within your Organisation.
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Desktop Integration
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </mock-styled.p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Pricing Information
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Will Test DevCo
         have specified there is no cost for using this 
        integration
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Data Permissions
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </mock-styled.p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
    </div>
    <mock-styled.div>
      <mock-styled.div
        classname="el-button-group-align-center"
      >
        <mock-styled.button
          classname="el-intent-neutral"
        >
          <mock-styled.div />
          Cancel
        </mock-styled.button>
        <mock-styled.button
          classname="el-intent-primary"
          disabled="false"
          type="button"
        >
          <mock-styled.div />
          Confirm
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where has off grouping, not an org admin 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-mb11"
      >
        <mock-styled.p
          classname="el-has-grey-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for your Office Group
           
          MOCK_OFFICE_GROUP
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Desktop Integration
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </mock-styled.p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Pricing Information
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Data Permissions
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </mock-styled.p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
      </div>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-center"
        >
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            Cancel
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
            type="button"
          >
            <mock-styled.div />
            Confirm
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-mb11"
    >
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for your Office Group
         
        MOCK_OFFICE_GROUP
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Desktop Integration
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </mock-styled.p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Pricing Information
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Data Permissions
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </mock-styled.p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
    </div>
    <mock-styled.div>
      <mock-styled.div
        classname="el-button-group-align-center"
      >
        <mock-styled.button
          classname="el-intent-neutral"
        >
          <mock-styled.div />
          Cancel
        </mock-styled.button>
        <mock-styled.button
          classname="el-intent-primary"
          disabled="false"
          type="button"
        >
          <mock-styled.div />
          Confirm
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where not free but no pricing details 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-mb11"
      >
        <mock-styled.p
          classname="el-has-grey-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for 
          <b>
            all
          </b>
           Users and Offices within your Organisation.
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Desktop Integration
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </mock-styled.p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Pricing Information
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          There may be a cost associated to using this 
          integration
          . However, this information has not yet been provided by 
          Will Test DevCo
          . Please contact 
          Will Test DevCo
           directly for information about pricing.
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Data Permissions
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </mock-styled.p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
      </div>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-center"
        >
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            Cancel
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
            type="button"
          >
            <mock-styled.div />
            Confirm
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-mb11"
    >
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for 
        <b>
          all
        </b>
         Users and Offices within your Organisation.
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Desktop Integration
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </mock-styled.p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Pricing Information
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        There may be a cost associated to using this 
        integration
        . However, this information has not yet been provided by 
        Will Test DevCo
        . Please contact 
        Will Test DevCo
         directly for information about pricing.
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Data Permissions
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </mock-styled.p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
    </div>
    <mock-styled.div>
      <mock-styled.div
        classname="el-button-group-align-center"
      >
        <mock-styled.button
          classname="el-intent-neutral"
        >
          <mock-styled.div />
          Cancel
        </mock-styled.button>
        <mock-styled.button
          classname="el-intent-primary"
          disabled="false"
          type="button"
        >
          <mock-styled.div />
          Confirm
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where not off grouping, not an org admin 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-mb11"
      >
        <mock-styled.p
          classname="el-has-grey-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for 
          <b>
            all
          </b>
           Users and Offices within your Organisation.
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Desktop Integration
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </mock-styled.p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Pricing Information
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </mock-styled.p>
        <mock-styled.p
          classname=""
        >
          Data Permissions
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </mock-styled.p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
      </div>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-center"
        >
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            Cancel
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
            type="button"
          >
            <mock-styled.div />
            Confirm
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-mb11"
    >
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for 
        <b>
          all
        </b>
         Users and Offices within your Organisation.
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Desktop Integration
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </mock-styled.p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Pricing Information
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        Data Permissions
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </mock-styled.p>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </mock-styled.p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
    </div>
    <mock-styled.div>
      <mock-styled.div
        classname="el-button-group-align-center"
      >
        <mock-styled.button
          classname="el-intent-neutral"
        >
          <mock-styled.div />
          Cancel
        </mock-styled.button>
        <mock-styled.button
          classname="el-intent-primary"
          disabled="false"
          type="button"
        >
          <mock-styled.div />
          Confirm
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
